--- a/store_locator.html
+++ b/store_locator.html
@@ -5,9 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Brewtopia Store Locator</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
+
+  <!-- Header -->
+  <nav class="navbar navbar-expand-lg custom-navbar px-4"> 
+
+    <a class="navbar-brand text-white" href="#"><strong>☕ Brewtopia</strong></a>
+    <div class="collapse navbar-collapse justify-content-center">
+      <ul class="navbar-nav gap-3">
+        <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="#">Menu</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="#">Store Locator</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
+      </ul>
+    </div>
+    <div class="text-white">
+      🔍
+    </div>
+  </nav>
+  
+  <!-- Footer -->
+  <footer class="custom-footer text-center py-3">
+    <div class="d-flex justify-content-center gap-4">
+      <a href="#" class="text-white text-decoration-none">Careers</a>
+      <a href="#" class="text-white text-decoration-none">About Us</a>
+      <a href="#" class="text-white text-decoration-none">FAQs</a>
+      <a href="#" class="text-white text-decoration-none">T&C</a>
+    </div>
+    <p class="mb-1">© Copyright Brewtopia Design 2025</p>
+  </footer>
 
 
 </body>
