store locator search textbox and button
Added search text box and button onto the store locator page and defined custom css for them.

--- a/delivery_options.html
+++ b/delivery_options.html
@@ -16,7 +16,7 @@
 		<span class="navbar-toggler-icon"></span>
 	  </button>
 
-	  <a class="navbar-brand text-white" href="#"><strong>☕ Brewtopia</strong></a>
+	  <a class="navbar-brand text-white" href="index.html"><strong>☕ Brewtopia</strong></a>
 
 	  <!-- Collapsible menu so it can be folded on mobile device but unfolds on desktop -->
 	  <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
