--- a/store_locator.html
+++ b/store_locator.html
@@ -16,7 +16,7 @@
 		<span class="navbar-toggler-icon"></span>
 	  </button>
 
-	  <a class="navbar-brand text-white" href="#"><strong>☕ Brewtopia</strong></a>
+	  <a class="navbar-brand text-white" href="index.html"><strong>☕ Brewtopia</strong></a>
 
 	  <!-- Collapsible menu so it can be folded on mobile device but unfolds on desktop -->
 	  <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
@@ -33,6 +33,16 @@
 		🔍
 	  </div>
 	</nav>
+  
+	<!-- Title and search text box on the page -->
+	<div class="custom-store-finder my-4 text-center">
+	  <h2 class="mb-4 fw-bold">Find a Coffee Shop Near You</h2>
+	  <div class="input-group justify-content-center mb-4 w-75 mx-auto">
+		<input type="text" class="form-control custom-input" placeholder="Enter city, postcode, or store name">
+		<button class="btn custom-btn" type="button">🔍</button>
+	  </div>
+	</div>
+  
   
   
   
