--- a/delivery_options.html
+++ b/delivery_options.html
@@ -21,7 +21,7 @@
 	  <!-- Collapsible menu so it can be folded on mobile device but unfolds on desktop -->
 	  <div class="collapse navbar-collapse justify-content-center" id="navbarContent">
 		<ul class="navbar-nav gap-3">
-		  <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
+		  <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
 		  <li class="nav-item"><a class="nav-link text-white" href="#">Menu</a></li>
 		  <li class="nav-item"><a class="nav-link text-white" href="#">Store Locator</a></li>
 		  <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
@@ -30,17 +30,17 @@
 
 	  <!-- Search icon to jump fast to store locator page -->
 	  <div class="text-white">
-		🔍
+		<a href="store_locator.html">🔍</a>
 	  </div>
 	</nav>
   
   <!-- Footer -->
   <footer class="custom-footer text-center py-3">
     <div class="d-flex justify-content-center gap-4">
-      <a href="#" class="text-white text-decoration-none">Careers</a>
-      <a href="#" class="text-white text-decoration-none">About Us</a>
-      <a href="#" class="text-white text-decoration-none">FAQs</a>
-      <a href="#" class="text-white text-decoration-none">T&C</a>
+      <a href="#" class="footer-link text-white">Careers</a>
+      <a href="#" class="footer-link text-white">About Us</a>
+      <a href="#" class="footer-link text-white">FAQs</a>
+      <a href="#" class="footer-link text-white">T&C</a>
     </div>
     <p class="mb-1">© Copyright Brewtopia Design 2025</p>
   </footer>
