delivery partners added
delivery partners added into delivery options page.

--- a/store_locator.html
+++ b/store_locator.html
@@ -23,7 +23,7 @@
 		<ul class="navbar-nav gap-3">
 		  <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
 		  <li class="nav-item"><a class="nav-link text-white" href="#">Menu</a></li>
-		  <li class="nav-item"><a class="nav-link text-white" href="#">Store Locator</a></li>
+		  <li class="nav-item"><a class="nav-link text-white" href="store_locator.html">Store Locator</a></li>
 		  <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
 		</ul>
 	  </div>
@@ -60,7 +60,7 @@
 			<strong>Espresso Vibes</strong><br>
 			<small><strong>Addr:</strong> 20 Coffee Crescent, AL8 2HZ</small><br>
 			<small><strong>Distance:</strong> 0.2 miles</small><br>
-			<small class="text-danger">Closes at 5pm, in 2hr 23 min</small><br>
+			<small class="text-green">Closes at 5pm, in 2hr 23 min</small><br>
 			<small>Click&collect, Delivery, In-store<br>WC, Free Wi-Fi, step free access</small>
 		  </div>
 
@@ -68,7 +68,7 @@
 			<strong>Amber Roast</strong><br>
 			<small><strong>Addr:</strong> 7 Maple Avenue, AL8 2EF</small><br>
 			<small><strong>Distance:</strong> 0.2 miles</small><br>
-			<small class="text-danger">Closes at 4:30pm, in 1hr 53 min</small><br>
+			<small class="text-green">Closes at 4:30pm, in 1hr 53 min</small><br>
 			<small>Click&collect, Delivery, In-store<br>WC, Free Wi-Fi, step free access</small>
 		  </div>
 
@@ -76,7 +76,7 @@
 			<strong>The Gilded Cup</strong><br>
 			<small><strong>Addr:</strong> 30 Abbey Road, AL8 9TW</small><br>
 			<small><strong>Distance:</strong> 0.2 miles</small><br>
-			<small class="text-danger">Closes at 5pm, in 2hr 23 min</small><br>
+			<small class="text-green">Closes at 5pm, in 2hr 23 min</small><br>
 			<small>Click&collect, Delivery, In-store<br>WC, Free Wi-Fi, step free access</small>
 		  </div>
 
@@ -84,7 +84,7 @@
 			<strong>Velvet Bean Café</strong><br>
 			<small><strong>Addr:</strong> 11 Ashfield Gardens, AL8 7DB</small><br>
 			<small><strong>Distance:</strong> 0.2 miles</small><br>
-			<small class="text-danger">Closes at 5pm, in 2hr 23 min</small><br>
+			<small class="text-green">Closes at 5pm, in 2hr 23 min</small><br>
 			<small>Click&collect, Delivery, In-store<br>WC, Free Wi-Fi, step free access</small>
 		  </div>
 		</div>
