--- a/delivery_options.html
+++ b/delivery_options.html
@@ -23,7 +23,7 @@
 		<ul class="navbar-nav gap-3">
 		  <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
 		  <li class="nav-item"><a class="nav-link text-white" href="#">Menu</a></li>
-		  <li class="nav-item"><a class="nav-link text-white" href="#">Store Locator</a></li>
+		  <li class="nav-item"><a class="nav-link text-white" href="store_locator.html">Store Locator</a></li>
 		  <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
 		</ul>
 	  </div>
@@ -33,6 +33,30 @@
 		<a href="store_locator.html">🔍</a>
 	  </div>
 	</nav>
+  
+  <!-- here, the main content goes -->
+  <div class="container my-4">
+  <h3 class="text-center mb-4">Select Delivery Option For Your Online Order</h3>
+
+  <!-- Delivery partners images and names -->
+  <div class="row text-center mb-4 justify-content-center">
+    <div class="col-4 col-sm-3 col-md-4">
+      <img src="assets/images/uber_eats.png" class="img-fluid mb-2 w-100" alt="Uber Eats">
+      <p class="fw-bold small">Uber Eats</p>
+    </div>
+    <div class="col-4 col-sm-3 col-md-4">
+      <img src="assets/images/deliveroo.png" class="img-fluid border border-primary rounded mb-2 w-100" alt="Deliveroo">
+      <p class="fw-bold small">Deliveroo</p>
+    </div>
+    <div class="col-4 col-sm-3 col-md-4">
+      <img src="assets/images/just_eat.png" class="img-fluid mb-2 w-100" alt="Just Eat">
+      <p class="fw-bold small">Just Eat</p>
+    </div>
+  </div>
+</div>
+
+
+  </div>  
   
   <!-- Footer -->
   <footer class="custom-footer text-center py-3">
