--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<ul class="navbar-nav gap-3">
 		  <li class="nav-item"><a class="nav-link text-white" href="#">Home</a></li>
 		  <li class="nav-item"><a class="nav-link text-white" href="#">Menu</a></li>
-		  <li class="nav-item"><a class="nav-link text-white" href="#">Store Locator</a></li>
+		  <li class="nav-item"><a class="nav-link text-white" href="store_locator.html">Store Locator</a></li>
 		  <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
 		</ul>
 	  </div>
