images adjusted, delivery partner selection
sizes of the images are adjusted. Delivery partner selection custom style done to highlight user's choice. Order Now button custom style done. Order total style adjusted.

--- a/delivery_options.html
+++ b/delivery_options.html
@@ -41,22 +41,22 @@
 	<!-- Delivery partners images and names -->
 	  <div class="row text-center mb-4 justify-content-center">
 		<div class="col-4 col-sm-3 col-md-4">
-		  <img src="assets/images/uber_eats.png" class="img-fluid mb-2 w-100" alt="Uber Eats">
-		  <p class="fw-bold small">Uber Eats</p>
+		  <img src="assets/images/uber_eats.png" class="img-fluid delivery-partner-image mb-2 w-100" alt="Uber Eats">
+		  <p class="fw-bold delivery-partner-name">Uber Eats</p>
 		</div>
 		<div class="col-4 col-sm-3 col-md-4">
-		  <img src="assets/images/deliveroo.png" class="img-fluid border border-primary rounded mb-2 w-100" alt="Deliveroo">
-		  <p class="fw-bold small">Deliveroo</p>
+		  <img src="assets/images/deliveroo.png" class="img-fluid delivery-partner-image mb-2 w-100" alt="Deliveroo">
+		  <p class="fw-bold delivery-partner-name">Deliveroo</p>
 		</div>
 		<div class="col-4 col-sm-3 col-md-4">
-		  <img src="assets/images/just_eat.png" class="img-fluid mb-2 w-100" alt="Just Eat">
-		  <p class="fw-bold small">Just Eat</p>
+		  <img src="assets/images/just_eat.png" class="img-fluid delivery-partner-image mb-2 w-100" alt="Just Eat">
+		  <p class="fw-bold delivery-partner-name">Just Eat</p>
 		</div>
 	  </div>
   
 	<!-- here, main form goes with all the fields and submit button -->
 	<form>
-	  <!-- Name -->
+	  <!-- Name field -->
 	  <div class="row mb-3">
 		<div class="col-12 col-md-2">
 		  <label class="form-label">Name*</label>
@@ -69,7 +69,7 @@
 		</div>
 	  </div>
 
-	  <!-- Email -->
+	  <!-- Email field -->
 	  <div class="row mb-3">
 		<div class="col-12 col-md-2">
 		  <label class="form-label">Email*</label>
@@ -79,7 +79,7 @@
 		</div>
 	  </div>
 
-	  <!-- Phone -->
+	  <!-- Phone field -->
 	  <div class="row mb-3">
 		<div class="col-12 col-md-2">
 		  <label class="form-label">Phone Number*</label>
@@ -89,7 +89,7 @@
 		</div>
 	  </div>
 
-	  <!-- Address -->
+	  <!-- Address field -->
 	  <div class="row mb-3">
 		<div class="col-12 col-md-2">
 		  <label class="form-label">Address*</label>
@@ -113,7 +113,7 @@
 		</div>
 	  </div>
 
-	  <!-- Time Slot & Comments -->
+	  <!-- Time slot field and optional comment -->
 	  <div class="row mb-3">
 		<div class="col-12 col-md-2">
 		  <label class="form-label">Time Slot</label>
