added list of ordered items
Added list of ordered items onto the order summary page.

--- a/order_summary.html
+++ b/order_summary.html
@@ -34,6 +34,77 @@
 	  </div>
 	</nav>
   
+  <!-- Here, the main content for the order summary page goes -->
+  <div class="container py-3">
+    <h4 class="text-center fw-bold">Order Summary</h4>
+    <hr class="custom-divider" />
+
+    <!-- coffee frappuccino order item -->
+	<div class="order-item d-flex flex-column flex-md-row justify-content-between align-items-start my-3 border-bottom pb-2">
+	  <div class="d-flex mb-3 mb-md-0 order-left">
+		<img src="assets/images/coffee.png" class="thumb me-2" alt="Coffee" />
+		<div class="item-details">
+		  <div class="item-title fw-bold">Coffee Frappuccino</div>
+		  <small class="item-subtitle">Medium Coffee</small>
+		  <div class="quantity-controls mt-1">
+			<button class="btn btn-sm btn-dark">-</button>
+			<span class="mx-2">2</span>
+			<button class="btn btn-sm btn-dark">+</button>
+		  </div>
+		</div>
+	  </div>
+	  <div class="text-end order-price">
+		<div class="item-price fw-bold">£3.50</div>
+		<small class="item-breakdown">2 x £1.75</small>
+	  </div>
+	</div>
+
+
+    <!-- Panini order item -->
+	<div class="order-item d-flex flex-column flex-md-row justify-content-between align-items-start my-3 border-bottom pb-2">
+	  <div class="d-flex mb-3 mb-md-0 order-left">
+		<img src="assets/images/sandwich.png" class="thumb me-2" alt="Ham and Cheese Panini" />
+		<div class="item-details">
+		  <div class="item-title fw-bold">Ham and Cheese Panini</div>
+		  <small class="item-subtitle">Small Sandwich</small>
+		  <div class="quantity-controls mt-1">
+			<button class="btn btn-sm btn-dark">-</button>
+			<span class="mx-2">1</span>
+			<button class="btn btn-sm btn-dark">+</button>
+		  </div>
+		</div>
+	  </div>
+	  <div class="text-end order-price">
+		<div class="item-price fw-bold">£2.30</div>
+		<small class="item-breakdown">1 x £2.30</small>
+	  </div>
+	</div>
+
+
+    <!-- Cake order item -->
+	<div class="order-item d-flex flex-column flex-md-row justify-content-between align-items-start my-3 border-bottom pb-2">
+	  <div class="d-flex mb-3 mb-md-0 order-left">
+		<img src="assets/images/cake.png" class="thumb me-2" alt="Triple Chocolate Cake" />
+		<div class="item-details">
+		  <div class="item-title fw-bold">Triple Chocolate Cake</div>
+		  <small class="item-subtitle">Medium Slice</small>
+		  <div class="quantity-controls mt-1">
+			<button class="btn btn-sm btn-dark">-</button>
+			<span class="mx-2">1</span>
+			<button class="btn btn-sm btn-dark">+</button>
+		  </div>
+		</div>
+	  </div>
+	  <div class="text-end order-price">
+		<div class="item-price fw-bold">£1.30</div>
+		<small class="item-breakdown">1 x £1.30</small>
+	  </div>
+	</div>
+
+
+
+  </div>
+  
   <!-- Footer -->
   <footer class="custom-footer text-center py-3">
     <div class="d-flex justify-content-center gap-4">
