Adjusted colour of asterisk, adjusted size of delivery partner images and added lables
On the delivery options page, I adjusted the colour of the asterisk for mandatory fields to be filled in. I adjusted the size of the delivery partner images and I added labels under certain fields such as Name and address fields.

--- a/delivery_options.html
+++ b/delivery_options.html
@@ -41,15 +41,15 @@
 	<!-- Delivery partners images and names -->
 	  <div class="row text-center mb-4 justify-content-center">
 		<div class="col-4 col-sm-3 col-md-4">
-		  <img src="assets/images/uber_eats.png" class="img-fluid delivery-partner-image mb-2 w-100" alt="Uber Eats">
+		  <img src="assets/images/uber_eats.png" class="img-fluid delivery-partner-image mb-2 w-75" alt="Uber Eats">
 		  <p class="fw-bold delivery-partner-name">Uber Eats</p>
 		</div>
 		<div class="col-4 col-sm-3 col-md-4">
-		  <img src="assets/images/deliveroo.png" class="img-fluid delivery-partner-image mb-2 w-100" alt="Deliveroo">
+		  <img src="assets/images/deliveroo.png" class="img-fluid delivery-partner-image mb-2 w-75" alt="Deliveroo">
 		  <p class="fw-bold delivery-partner-name">Deliveroo</p>
 		</div>
-		<div class="col-4 col-sm-3 col-md-4">
-		  <img src="assets/images/just_eat.png" class="img-fluid delivery-partner-image mb-2 w-100" alt="Just Eat">
+		<div class="col-4 col-sm-3 col-md-4">  
+		  <img src="assets/images/just_eat.png" class="img-fluid delivery-partner-image mb-2 w-75" alt="Just Eat">
 		  <p class="fw-bold delivery-partner-name">Just Eat</p>
 		</div>
 	  </div>
@@ -59,20 +59,24 @@
 	  <!-- Name field -->
 	  <div class="row mb-3">
 		<div class="col-12 col-md-2">
-		  <label class="form-label">Name*</label>
+		  <label class="form-label">Name</label>
+		  <label class="form-label text-red">*</label>
 		</div>
 		<div class="col-12 col-md-5 mb-2 mb-md-0">
 		  <input type="text" class="form-control custom-input" placeholder="John" />
+		  <label class="form-label">First</label>
 		</div>
 		<div class="col-12 col-md-5">
 		  <input type="text" class="form-control custom-input" placeholder="Smith" />
+		  <label class="form-label">Last</label>
 		</div>
 	  </div>
 
 	  <!-- Email field -->
 	  <div class="row mb-3">
 		<div class="col-12 col-md-2">
-		  <label class="form-label">Email*</label>
+		  <label class="form-label">Email</label>
+		  <label class="form-label text-red">*</label>
 		</div>
 		<div class="col-12 col-md-10">
 		  <input type="email" class="form-control custom-input" placeholder="John.Smith@gmail.com" />
@@ -82,7 +86,8 @@
 	  <!-- Phone field -->
 	  <div class="row mb-3">
 		<div class="col-12 col-md-2">
-		  <label class="form-label">Phone Number*</label>
+		  <label class="form-label">Phone Number</label>
+		  <label class="form-label text-red">*</label>
 		</div>
 		<div class="col-12 col-md-10">
 		  <input type="text" class="form-control custom-input" placeholder="07932628795" />
@@ -92,22 +97,28 @@
 	  <!-- Address field -->
 	  <div class="row mb-3">
 		<div class="col-12 col-md-2">
-		  <label class="form-label">Address*</label>
+		  <label class="form-label">Address</label>
+		  <label class="form-label text-red">*</label>
 		</div>
 		<div class="col-12 col-md-10">
 		  <input type="text" class="form-control custom-input mb-2" placeholder="22 Potters Crescent" />
+		  <label class="form-label">Street Address</label>
 		  <div class="row g-2">
 			<div class="col-12 col-sm-6 col-md-3">
 			  <input type="text" class="form-control custom-input" placeholder="Hatfield" />
+			  <label class="form-label">City</label>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
 			  <input type="text" class="form-control custom-input" placeholder="Hertfordshire" />
+			  <label class="form-label">State/Province/Region</label>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
 			  <input type="text" class="form-control custom-input" placeholder="AL9 8QZ" />
+			  <label class="form-label">Postal/Zip Code</label>
 			</div>
 			<div class="col-12 col-sm-6 col-md-3">
 			  <input type="text" class="form-control custom-input" placeholder="Great Britain" />
+			  <label class="form-label">Country/Region</label>
 			</div>
 		  </div>
 		</div>
